force-app/main/default/objects/ArchivedPayment__x/ArchivedPayment__x.object-meta.xml
<CustomObject>
    <description>Payment__c</description>
    <externalDataSource>Privacy_Center_Retention_Store</externalDataSource>
    <externalName>c_01_i_ig000000bt_yh</externalName>
    <label>Archived Payment</label>
    <pluralLabel>Archived Payments</pluralLabel>
</CustomObject>