force-app/main/default/objects/ArchivedPayment__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <externalDeveloperName>c_00_n_ig000001_qut_a</externalDeveloperName>
    <label>Account</label>
    <length>15</length>
    <referenceTargetField>Account.ebikesaws__ExtAccountId__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Archived Payments</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>IndirectLookup</type>
</CustomField>