force-app/main/default/objects/ArchivedPayment__x/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>c_00_n_ig000001_qut5</externalDeveloperName>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>