force-app/main/default/objects/ArchivedPayment__x/fields/Archived_Account__c.field-meta.xml
<CustomField>
    <fullName>Archived_Account__c</fullName>
    <externalDeveloperName>c_00_n_ig000001_qut0</externalDeveloperName>
    <label>Archived Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>