force-app/main/default/objects/ArchivedPayment__x/fields/Credit_Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Expiry_Date__c</fullName>
    <externalDeveloperName>c_00_n_ig000001_q_o_r_i</externalDeveloperName>
    <label>Credit Card Expiry Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>