force-app/main/default/objects/ArchivedPayment__x/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <externalDeveloperName>c_00_n_ig000001_q_o_r_j</externalDeveloperName>
    <label>Credit Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>