force-app/main/default/objects/ArchivedPayment__x/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <externalDeveloperName>c_00_n_ig000001_q_o_r_k</externalDeveloperName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>