force-app/main/default/objects/ArchivedPayment__x/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <externalDeveloperName>lastactivitydate</externalDeveloperName>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>