force-app/main/default/objects/ArchivedPayment__x/fields/Payment_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Name__c</fullName>
    <externalDeveloperName>name</externalDeveloperName>
    <label>Payment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>